[BugFix] Resolve conflicts
Signed-off-by: Alex Zhu <zhuming9011@gmail.com>